add arrow for seaseon-select, change time notation

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Google Material Icons -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <!-- Reset CSS-->
     <link rel="stylesheet" href="css/destyle.min.css" />
     <!-- CSS -->
@@ -18,7 +23,9 @@
   </head>
   <body>
     <main class="main">
-      <select class="seasons-select"></select>
+      <div class="seasons-select-wrap">
+        <select class="seasons-select"></select>
+      </div>
 
       <div class="season-start-time">
         <div class="start-time-year"></div>
