add countdown timer

--- a/index.html
+++ b/index.html
@@ -47,9 +47,23 @@
       </div>
 
       <div class="day-remaining">
-        <div>残り</div>
+        <div>残り日数(ゲーム内表記)：</div>
         <div class="day-remaining-num">0</div>
         <div class="day-remaining-unit">日</div>
+      </div>
+
+      <div class="countdown">
+        <div>残り</div>
+        <div class="countdown-time">
+          <div class="countdown-day"></div>
+          <span>日</span>
+          <div class="countdown-hour"></div>
+          <span>時間</span>
+          <div class="countdown-min"></div>
+          <span>分</span>
+          <div class="countdown-sec"></div>
+          <span>秒</span>
+        </div>
       </div>
     </main>
 
