fix countdown timer font-size

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
         <div>残り</div>
         <div class="countdown-time">
           <div class="countdown-day"></div>
-          <span>日</span>
+          <span class="countdown-unit">日</span>
           <div class="countdown-hour"></div>
-          <span>時間</span>
+          <span class="countdown-unit">時間</span>
           <div class="countdown-min"></div>
-          <span>分</span>
+          <span class="countdown-unit">分</span>
           <div class="countdown-sec"></div>
-          <span>秒</span>
+          <span class="countdown-unit">秒</span>
         </div>
       </div>
     </main>
